name:                pipes-gremlin
version:             0.1.0.1
synopsis:            Graph query language based on pipes heavily inspired by gremlin.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          pschuster@uni-koblenz.de
-- copyright:           
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Database.PipesGremlin,
                       Database.PipesGremlin.Internal
  other-modules:       Database.PipesGremlinTest
  build-depends:       base >=4.5 && <4.7,
                       pipes == 3.3.*,
                       pipes-safe,
                       neo4j-haskell,
                       transformers,
                       aeson,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010