name:                pipes-gremlin
version:             0.5.0.1
synopsis:            Graph query language based on pipes heavily inspired by gremlin.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          pschuster@uni-koblenz.de
-- copyright:           
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Database.PipesGremlin,
                       Database.PipesGremlin.Internal
  other-modules:       Database.PipesGremlinTest
  build-depends:       base,
                       haskell-neo,
                       haskell-rest,
                       pipes,
                       mtl,
                       transformers,
                       aeson,
                       unordered-containers,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010